2011-02-15  Chris Rogers  <crogers@google.com>

Reviewed by Alexey Proskuryakov.

        Fix Mutex::tryLock() on Windows to work properly with PlatformCondition::timedWait()
        https://bugs.webkit.org/show_bug.cgi?id=54408

        * wtf/ThreadingWin.cpp:
        (WTF::PlatformCondition::timedWait):


git-svn-id: svn://svn.chromium.org/blink/trunk@78597 bbb929c8-8fbe-4397-9dbb-9b2b20218538